Puppet: Ntp support
This patch adds NTP support to all roles.

As part of this change overcloud-without-mergepy.yaml has
also been updated so that it passes the NtpServer parameters into
the Swift and Cinder storage node templates so that Ntp can
also be configured on those machines as well.

NOTE: The puppet support here uses the puppetlabs-ntp modules
which we add in Ib10ccbfdb3140b19f40049707548c6655d250e1c.

Change-Id: If2ef236fa42a714e84c6944eee5fe4daddf3fedf

--- a/cinder-storage-puppet.yaml
+++ b/cinder-storage-puppet.yaml
@@ -81,6 +81,10 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
+  NtpServer:
+    type: string
+    default: ''
+
 resources:
   BlockStorage:
     type: OS::Nova::Server
@@ -115,6 +119,11 @@ resources:
               host: {get_param: VirtualIP}
         rabbit_username: {get_param: RabbitUserName}
         rabbit_password: {get_param: RabbitPassword}
+        ntp_servers:
+          str_replace:
+            template: '["server"]'
+            params:
+              server: {get_param: NtpServer}
       signal_transport: NO_SIGNAL
 
   # Map heat metadata into hiera datafiles
@@ -143,6 +152,7 @@ resources:
                 cinder::rabbit_hosts: {get_input: rabbit_hosts}
                 cinder::rabbit_userid: {get_input: rabbit_username}
                 cinder::rabbit_password: {get_input: rabbit_password}
+                ntp::servers: {get_input: ntp_servers}
 
   VolumePuppetConfig:
     type: OS::Heat::SoftwareConfig
