--- a/compute-puppet.yaml
+++ b/compute-puppet.yaml
@@ -335,7 +335,7 @@ resources:
                 nova::rabbit_password: {get_input: rabbit_password}
                 neutron::rabbit_password: {get_input: rabbit_password}
                 ceilometer::rabbit_password: {get_input: rabbit_password}
-                ntp_server: {get_input: ntp_server}
+                ntp::servers: {get_input: ntp_servers}
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
@@ -380,7 +380,11 @@ resources:
         rabbit_host: {get_param: RabbitHost}
         rabbit_username: {get_param: RabbitUserName}
         rabbit_password: {get_param: RabbitPassword}
-        ntp_server: {get_param: NtpServer}
+        ntp_servers:
+          str_replace:
+            template: '["server"]'
+            params:
+              server: {get_param: NtpServer}
 
 outputs:
   ip_address:
