--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -524,7 +524,11 @@ resources:
         rabbit_cookie: {get_param: RabbitCookie}
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
-        ntp_server: {get_param: NtpServer}
+        ntp_servers:
+          str_replace:
+            template: '["server"]'
+            params:
+              server: {get_param: NtpServer}
         control_virtual_interface: {get_param: ControlVirtualInterface}
         public_virtual_interface: {get_param: PublicVirtualInterface}
         public_virtual_ip: {get_param: PublicVirtualIP}
@@ -685,7 +689,7 @@ resources:
                 rabbit_client_port: {get_input: rabbit_client_port}
                 # Misc
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
-                ntp_server: {get_input: ntp_server}
+                ntp::servers: {get_input: ntp_servers}
                 control_virtual_interface: {get_input: control_virtual_interface}
                 controller_virtual_ip: {get_input: controller_virtual_ip}
                 public_virtual_interface: {get_input: public_virtual_interface}
