--- a/swift-storage-puppet.yaml
+++ b/swift-storage-puppet.yaml
@@ -44,6 +44,9 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
+  NtpServer:
+    type: string
+    default: ''
 
 resources:
 
@@ -114,6 +117,7 @@ resources:
                 swift::storage::all::storage_local_net_ip: {get_input: local_ip}
                 swift_mount_check: {get_input: swift_mount_check }
                 tripleo::ringbuilder::min_part_hours: { get_input: swift_min_part_hours }
+                ntp::servers: {get_input: ntp_servers}
                 # NOTE(dprince): build_ring support is currently not wired in.
                 # See: https://review.openstack.org/#/c/109225/
                 tripleo::ringbuilder::build_ring: True
@@ -134,6 +138,11 @@ resources:
         swift_min_part_hours: {get_param: MinPartHours}
         swift_part_power: {get_param: PartPower}
         swift_replicas: { get_param: Replicas}
+        ntp_servers:
+          str_replace:
+            template: '["server"]'
+            params:
+              server: {get_param: NtpServer}
 
 outputs:
   hosts_entry:
