Puppet: Heat API and Engine
This patch adds the ability to configure the Heat API and
Heat engine on controller nodes via puppet.

Change-Id: Ie81090bceed3e18199a36ebb11d1cbcaea83c410

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -20,6 +20,7 @@ neutron::agents::metadata::auth_tenant: 'service'
 cinder::api::keystone_tenant: 'service'
 swift::proxy::authtoken::admin_tenant_name: 'service'
 ceilometer::api::keystone_tenant: 'service'
+heat::keystone_tenant: 'service'
 
 #swift
 swift::proxy::pipeline:
@@ -62,5 +63,10 @@ nova::api::osapi_v3: true
 
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
+
+# heat
+heat::engine::heat_stack_user_role: ''
+heat::engine::configure_delegated_roles: false
+heat::engine::trusts_delegated_roles: []
 
 mysql::server::manage_config_file: true
