--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -611,12 +611,21 @@ resources:
                 glance::backend::swift::swift_store_user: service:glance
                 glance::backend::swift::swift_store_key: {get_input: glance_password}
                 # Heat
-                heat_password: {get_input: heat_password}
                 heat_stack_domain_admin_password: {get_input: heat_stack_domain_admin_password}
-                heat_dsn: {get_input: heat_dsn}
-                heat.watch_server_url: {get_input: heat.watch_server_url}
-                heat.metadata_server_url: {get_input: heat.metadata_server_url}
-                heat.waitcondition_server_url: {get_input: heat.waitcondition_server_url}
+                heat::engine::heat_watch_server_url: {get_input: heat.watch_server_url}
+                heat::engine::heat_metadata_server_url: {get_input: heat.metadata_server_url}
+                heat::engine::heat_waitcondition_server_url: {get_input: heat.waitcondition_server_url}
+                heat::engine::auth_encryption_key: unset___________
+                heat::rabbit_userid: {get_input: rabbit_username}
+                heat::rabbit_password: {get_input: rabbit_password}
+                heat::rabbit_host: {get_input: controller_virtual_ip}
+                heat::keystone_host: {get_input: controller_virtual_ip}
+                heat::keystone_password: {get_input: heat_password}
+                heat::api::bind_host: {get_input: controller_host}
+                heat::api_cloudwatch::bind_host: {get_input: controller_host}
+                heat::api_cfn::bind_host: {get_input: controller_host}
+                heat::database_connection: {get_input: heat_dsn}
+
                 # Keystone
                 keystone::admin_token: {get_input: admin_token}
                 keystone_ca_certificate: {get_input: keystone_ca_certificate}
@@ -709,6 +718,9 @@ resources:
                 tripleo::loadbalancer::rabbitmq: true
                 tripleo::loadbalancer::swift_proxy_server: true
                 tripleo::loadbalancer::ceilometer: true
+                tripleo::loadbalancer::heat_api: true
+                tripleo::loadbalancer::heat_cloudwatch: true
+                tripleo::loadbalancer::heat_cfn: true
 
   # NOTE(dprince): this example uses a composition class
   # on the puppet side (loadbalancer.pp). This seemed like the
