--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -703,24 +703,6 @@ resources:
                 controller_virtual_ip: {get_input: controller_virtual_ip}
                 public_virtual_interface: {get_input: public_virtual_interface}
                 public_virtual_ip: {get_input: public_virtual_ip}
-                # Load Balancer (composition class parameters)
-                tripleo::loadbalancer::keystone_admin: true
-                tripleo::loadbalancer::keystone_public: true
-                tripleo::loadbalancer::neutron: true
-                tripleo::loadbalancer::cinder: true
-                tripleo::loadbalancer::glance_api: true
-                tripleo::loadbalancer::glance_registry: true
-                tripleo::loadbalancer::nova_ec2: true
-                tripleo::loadbalancer::nova_osapi: true
-                tripleo::loadbalancer::nova_metadata: true
-                tripleo::loadbalancer::nova_novncproxy: true
-                tripleo::loadbalancer::mysql: true
-                tripleo::loadbalancer::rabbitmq: true
-                tripleo::loadbalancer::swift_proxy_server: true
-                tripleo::loadbalancer::ceilometer: true
-                tripleo::loadbalancer::heat_api: true
-                tripleo::loadbalancer::heat_cloudwatch: true
-                tripleo::loadbalancer::heat_cfn: true
 
   # NOTE(dprince): this example uses a composition class
   # on the puppet side (loadbalancer.pp). This seemed like the
@@ -734,13 +716,47 @@ resources:
         enable_hiera: True
         enable_facter: False
       inputs:
+      - name: tripleo::loadbalancer::keystone_admin
+        default: true
+      - name: tripleo::loadbalancer::keystone_public
+        default: true
+      - name: tripleo::loadbalancer::neutron
+        default: true
+      - name: tripleo::loadbalancer::cinder
+        default: true
+      - name: tripleo::loadbalancer::glance_api
+        default: true
+      - name: tripleo::loadbalancer::glance_registry
+        default: true
+      - name: tripleo::loadbalancer::nova_ec2
+        default: true
+      - name: tripleo::loadbalancer::nova_osapi
+        default: true
+      - name: tripleo::loadbalancer::nova_metadata
+        default: true
+      - name: tripleo::loadbalancer::nova_novncproxy
+        default: true
+      - name: tripleo::loadbalancer::mysql
+        default: true
+      - name: tripleo::loadbalancer::rabbitmq
+        default: true
+      - name: tripleo::loadbalancer::swift_proxy_server
+        default: true
+      - name: tripleo::loadbalancer::ceilometer
+        default: true
+      - name: tripleo::loadbalancer::heat_api
+        default: true
+      - name: tripleo::loadbalancer::heat_cloudwatch
+        default: true
+      - name: tripleo::loadbalancer::heat_cfn
+        default: true
       outputs:
       - name: result
       config:
         get_file: puppet/loadbalancer.pp
 
   ControllerLoadbalancerPuppetDeployment:
-    type: OS::Heat::StructuredDeployment
+    type: OS::Heat::SoftwareDeployment
     properties:
       name: puppet_1
       server: {get_resource: Controller}
