Puppet: correct neutron metadata agents nova ip
This updates the controller config for the Neutron metadata
agent so that it configures the correct nova_metadata_ip
in /etc/neutron/metadata_agent.ini.

Change-Id: I4d6658ba54e582673938fa14a8c7de287dcd6662
Closes-bug: #1416781

--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -653,6 +653,7 @@ resources:
                 neutron::agents::ml2::ovs::local_ip: {get_input: controller_host}
                 neutron_flat_networks: {get_input: neutron_flat_networks}
                 neutron::agents::metadata::shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
+                neutron::agents::metadata::metadata_ip: {get_input: controller_virtual_ip}
                 neutron_agent_mode: {get_input: neutron_agent_mode}
                 neutron_router_distributed: {get_input: neutron_router_distributed}
                 neutron_mechanism_drivers: {get_input: neutron_mechanism_drivers}
