--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -56,6 +56,7 @@ neutron::dhcp_agents_per_network: 2
 neutron::plugins::ml2::tunnel_id_ranges:
   - '1:1000'
 neutron::server::sync_db: true
+neutron::agents::dhcp::dnsmasq_config_file: /etc/neutron/dnsmasq-neutron.conf
 
 # nova
 nova::notify_on_state_change: 'vm_and_task_state'
