Puppet: First support Ceph
This is a first implementation of Ceph support in TripleO with Puppet:

* Install ceph-mon on controller node
* Install ceph-osd on cephstorage node

Co-Authored-By: Giulio Fidente <gfidente@redhat.com>

Change-Id: I48488cbe950047fae5e746e458106d6edb9a6183

--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -27,7 +27,7 @@ parameters:
   CephMonitors:
     default: ''
     description: The list of ip/names to use as Ceph monitors
-    type: string
+    type: json
 resources:
   CephStorage:
     type: OS::Nova::Server
