--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -556,11 +556,15 @@ resources:
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
             - rabbit # provided by allNodesConfig
+            - ceph_cluster # provided by CephClusterConfig
+            - ceph
             - bootstrap_node # provided by BootstrapNodeConfig
             - common
           datafiles:
             common:
               raw_data: {get_file: hieradata/common.yaml}
+            ceph:
+              raw_data: {get_file: hieradata/ceph.yaml}
             object:
               raw_data: {get_file: hieradata/object.yaml}
             controller:
