--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -10,6 +10,8 @@ resource_registry:
   OS::TripleO::ComputePostDeployment: compute-post.yaml
   OS::TripleO::ObjectStoragePostDeployment: swift-storage-post.yaml
   OS::TripleO::BlockStoragePostDeployment: cinder-storage-post.yaml
+  OS::TripleO::CephStoragePostDeployment: ceph-storage-post.yaml
   OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: swift-devices-and-proxy-config.yaml
+  OS::TripleO::CephClusterConfig::SoftwareConfig: ceph-cluster-config.yaml
   OS::TripleO::AllNodes::SoftwareConfig: all-nodes-config.yaml
   OS::TripleO::BootstrapNode::SoftwareConfig: bootstrap-config.yaml
