puppet: Add EnablePackageInstall option
This adds an option which enables package installation via
Yum when Puppet executes. Users might want to disable Yum
installation of packages via puppet when using pre-installed
images.

The option is off by default: meaning that Puppet will no
longer install packages by default. Users will need to
enable the EnablePackageInstall in order to get
the previous behavior.

The intent is to use the default_parameters section
of the Heat environment to allow users to cleanly enable this
features without wiring it into the top level. This is because
the new parameter is Puppet specific and doesn't really apply to
other implementations. Kilo Heat already has support for
default_parameters and so does python-heatclient.

NOTE: most TripleO users do not yet have the heatclient
features because setup-clienttools in tripleo-incubator only installs
releases via pip. It is for these reasons the default_parameters
section in overcloud-resource-registry-puppet.yaml is commented out
for now.

Change-Id: I3af71b801b87d080b367d9e4a1fb44c1bfea6e87

--- a/cinder-storage-puppet.yaml
+++ b/cinder-storage-puppet.yaml
@@ -84,6 +84,10 @@ parameters:
   NtpServer:
     type: string
     default: ''
+  EnablePackageInstall:
+    default: 'false'
+    description: Set to true to enable package installation via Puppet
+    type: boolean
 
 resources:
   BlockStorage:
@@ -124,6 +128,7 @@ resources:
             template: '["server"]'
             params:
               server: {get_param: NtpServer}
+        enable_package_install: {get_param: EnablePackageInstall}
       signal_transport: NO_SIGNAL
 
   # Map heat metadata into hiera datafiles
@@ -153,6 +158,7 @@ resources:
                 cinder::rabbit_userid: {get_input: rabbit_username}
                 cinder::rabbit_password: {get_input: rabbit_password}
                 ntp::servers: {get_input: ntp_servers}
+                enable_package_install: {get_input: enable_package_install}
 
   VolumePuppetConfig:
     type: OS::Heat::SoftwareConfig
