--- a/compute-puppet.yaml
+++ b/compute-puppet.yaml
@@ -227,7 +227,10 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
-
+  EnablePackageInstall:
+    default: 'false'
+    description: Set to true to enable package installation via Puppet
+    type: boolean
 
 resources:
 
@@ -336,6 +339,7 @@ resources:
                 neutron::rabbit_password: {get_input: rabbit_password}
                 ceilometer::rabbit_password: {get_input: rabbit_password}
                 ntp::servers: {get_input: ntp_servers}
+                enable_package_install: {get_input: enable_package_install}
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
@@ -385,6 +389,7 @@ resources:
             template: '["server"]'
             params:
               server: {get_param: NtpServer}
+        enable_package_install: {get_param: EnablePackageInstall}
 
 outputs:
   ip_address:
