--- a/controller-puppet.yaml
+++ b/controller-puppet.yaml
@@ -373,7 +373,10 @@ parameters:
   VirtualIP:
     type: string
     default: ''  # Has to be here because of the ignored empty value bug
-
+  EnablePackageInstall:
+    default: 'false'
+    description: Set to true to enable package installation via Puppet
+    type: boolean
 
 resources:
 
@@ -538,6 +541,7 @@ resources:
         swift_replicas: {get_param: SwiftReplicas}
         swift_min_part_hours: {get_param: SwiftMinPartHours}
         swift_mount_check: {get_param: SwiftMountCheck}
+        enable_package_install: {get_param: EnablePackageInstall}
 
   # Map heat metadata into hiera datafiles
   ControllerConfig:
@@ -704,6 +708,7 @@ resources:
                 controller_virtual_ip: {get_input: controller_virtual_ip}
                 public_virtual_interface: {get_input: public_virtual_interface}
                 public_virtual_ip: {get_input: public_virtual_ip}
+                enable_package_install: {get_input: enable_package_install}
 
   # NOTE(dprince): this example uses a composition class
   # on the puppet side (loadbalancer.pp). This seemed like the
