--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -5,3 +5,7 @@ resource_registry:
   OS::TripleO::Controller: controller-puppet.yaml
   OS::TripleO::ObjectStorage: swift-storage-puppet.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-bridge.yaml
+
+# NOTE(dprince): requires a new release of python-heatclient
+#default_parameters:
+  #EnablePackageInstall: false
