--- a/swift-storage-puppet.yaml
+++ b/swift-storage-puppet.yaml
@@ -47,6 +47,10 @@ parameters:
   NtpServer:
     type: string
     default: ''
+  EnablePackageInstall:
+    default: 'false'
+    description: Set to true to enable package installation via Puppet
+    type: boolean
 
 resources:
 
@@ -121,6 +125,7 @@ resources:
                 # NOTE(dprince): build_ring support is currently not wired in.
                 # See: https://review.openstack.org/#/c/109225/
                 tripleo::ringbuilder::build_ring: True
+                enable_package_install: {get_input: enable_package_install}
 
 
   SwiftStorageHieraDeploy:
@@ -143,6 +148,7 @@ resources:
             template: '["server"]'
             params:
               server: {get_param: NtpServer}
+        enable_package_install: {get_param: EnablePackageInstall}
 
 outputs:
   hosts_entry:
