puppet: disable swift proxy and glance backend
We have an issue where swift.devices metadata isn't showing
up on our controllers. This causes ringbuilding to fail
meaning swift-proxy won't startup.

This patch disables the swift-proxy and glance swift backend
until we can figure out exactly what caused this change.

Change-Id: I723a4b703d979d7475ac48f41c4c0ac91c306884
Partial-bug: 1418805

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -43,7 +43,7 @@ swift::proxy::account_autocreate: true
 glance::api::pipeline: 'keystone'
 glance::api::known_stores:
   - glance.store.filesystem.Store
-  - glance.store.swift.Store
+#  - glance.store.swift.Store
 glance::registry::pipeline: 'keystone'
 glance::registry::manage_service: true
 glance::backend::swift::swift_store_create_container_on_put: true
