Move all puppet templates into puppet directory.
This cleans up the top level tree by moving all the puppet
related bits into the puppet directory. The only exception
is overcloud-resource-registry-puppet.yaml which is
the puppet environment file and is used externally.

Change-Id: Idb65a7143b0f29e5579d4e9d1642e4cda6f65d50

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -1,11 +1,11 @@
 resource_registry:
-  OS::TripleO::BlockStorage: cinder-storage-puppet.yaml
-  OS::TripleO::Compute: compute-puppet.yaml
+  OS::TripleO::BlockStorage: puppet/cinder-storage-puppet.yaml
+  OS::TripleO::Compute: puppet/compute-puppet.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
-  OS::TripleO::Controller: controller-puppet.yaml
-  OS::TripleO::ObjectStorage: swift-storage-puppet.yaml
+  OS::TripleO::Controller: puppet/controller-puppet.yaml
+  OS::TripleO::ObjectStorage: puppet/swift-storage-puppet.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-bridge.yaml
-  OS::TripleO::CephStorage: ceph-storage-puppet.yaml
+  OS::TripleO::CephStorage: puppet/ceph-storage-puppet.yaml
 
 # NOTE(dprince): requires a new release of python-heatclient
 #default_parameters:
