--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -144,9 +144,9 @@ resources:
             - common
           datafiles:
             common:
-              raw_data: {get_file: puppet/hieradata/common.yaml}
+              raw_data: {get_file: hieradata/common.yaml}
             volume:
-              raw_data: {get_file: puppet/hieradata/volume.yaml}
+              raw_data: {get_file: hieradata/volume.yaml}
               oac_data:
                 cinder::volume::iscsi::iscsi_ip_address: local-ipv4
               mapped_data:
@@ -167,7 +167,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/overcloud_volume.pp
+        get_file: manifests/overcloud_volume.pp
 
   VolumePuppetDeployment:
     type: OS::Heat::StructuredDeployment
