--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -267,7 +267,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/overcloud_compute.pp
+        get_file: manifests/overcloud_compute.pp
 
   ComputePuppetDeployment:
     type: OS::Heat::StructuredDeployment
@@ -287,9 +287,9 @@ resources:
             - common
           datafiles:
             common:
-              raw_data: {get_file: puppet/hieradata/common.yaml}
+              raw_data: {get_file: hieradata/common.yaml}
             compute:
-              raw_data: {get_file: puppet/hieradata/compute.yaml}
+              raw_data: {get_file: hieradata/compute.yaml}
               oac_data:
                 nova::compute::vncserver_proxyclient_address: local-ipv4
               mapped_data:
