--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -557,11 +557,11 @@ resources:
             - common
           datafiles:
             common:
-              raw_data: {get_file: puppet/hieradata/common.yaml}
+              raw_data: {get_file: hieradata/common.yaml}
             object:
-              raw_data: {get_file: puppet/hieradata/object.yaml}
+              raw_data: {get_file: hieradata/object.yaml}
             controller:
-              raw_data: {get_file: puppet/hieradata/controller.yaml}
+              raw_data: {get_file: hieradata/controller.yaml}
               oac_data: # data we map in from other OAC configurations
                 bootstrap_nodeid: bootstrap_host.bootstrap_nodeid
                 # Swift
@@ -759,7 +759,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/loadbalancer.pp
+        get_file: manifests/loadbalancer.pp
 
   ControllerLoadbalancerPuppetDeployment:
     type: OS::Heat::SoftwareDeployment
@@ -780,7 +780,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/overcloud_controller.pp
+        get_file: manifests/overcloud_controller.pp
 
   # Step through a series of Puppet runs using the same manifest.
   # NOTE(dprince): Heat breakpoints would make for a really cool way to step
@@ -806,7 +806,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/ringbuilder.pp
+        get_file: manifests/ringbuilder.pp
 
   ControllerRingbuilderPuppetDeployment:
     type: OS::Heat::StructuredDeployment
