--- a/puppet/swift-storage-puppet.yaml
+++ b/puppet/swift-storage-puppet.yaml
@@ -71,7 +71,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/overcloud_object.pp
+        get_file: manifests/overcloud_object.pp
 
   StoragePuppetDeployment:
     type: OS::Heat::StructuredDeployment
@@ -87,7 +87,7 @@ resources:
       outputs:
       - name: result
       config:
-        get_file: puppet/ringbuilder.pp
+        get_file: manifests/ringbuilder.pp
 
   StorageRingbuilderPuppetDeployment:
     type: OS::Heat::StructuredDeployment
@@ -108,9 +108,9 @@ resources:
             - common
           datafiles:
             common:
-              raw_data: {get_file: puppet/hieradata/common.yaml}
+              raw_data: {get_file: hieradata/common.yaml}
             object:
-              raw_data: {get_file: puppet/hieradata/object.yaml}
+              raw_data: {get_file: hieradata/object.yaml}
               oac_data: # data we map in from other OAC configurations
                 tripleo::ringbuilder::devices: swift.devices
               mapped_data: # data supplied directly to this deployment configuration, etc
