--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -6,3 +6,4 @@ resource_registry:
   OS::TripleO::ObjectStorage: swift-storage.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::CephStorage: ceph-storage.yaml
+  OS::TripleO::ControllerPostDeployment: controller-post.yaml
