--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -554,6 +554,7 @@ resources:
             - heat_config_%{::deploy_config_name}
             - controller
             - object
+            - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
             - common
           datafiles:
             common:
@@ -564,8 +565,6 @@ resources:
               raw_data: {get_file: hieradata/controller.yaml}
               oac_data: # data we map in from other OAC configurations
                 bootstrap_nodeid: bootstrap_host.bootstrap_nodeid
-                # Swift
-                tripleo::ringbuilder::devices: swift.devices
               mapped_data: # data supplied directly to this deployment configuration, etc
                 debug: {get_input: debug}
                 bootstack_nodeid: {get_input: bootstack_nodeid}
