Split out allNodesConfig SoftwareConfig
This patch splits out the allNodesConfig config
such that alternate implementation (puppet for example)
can implement their own SoftwareConfig's via a nested stack.

This is controlled by the standard overcloud heat environment.

For os-apply-config deployments the implementation should work the
same as before.

For puppet deployments the implementation uses hiera metadata
to configure rabbit_nodes. The puppet deployment doesn't support
hosts, or freeform sysctl metadata yet so those are the same
for now as well.

Change-Id: I34ae30b1f37aca8b39586f7e350511462d66f694

--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -8,3 +8,4 @@ resource_registry:
   OS::TripleO::CephStorage: ceph-storage.yaml
   OS::TripleO::ControllerPostDeployment: controller-post.yaml
   OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: swift-devices-and-proxy-config.yaml
+  OS::TripleO::AllNodes::SoftwareConfig: all-nodes-config.yaml
