--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -555,6 +555,7 @@ resources:
             - controller
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
+            - rabbit # provided by allNodesConfig
             - common
           datafiles:
             common:
