Puppet/RabbitMQ: support clustering
Allow to install & configure RabbitMQ in cluster with Puppet on
the controller node.

Change-Id: Iebbf55c75b8c80453c7313bb41faf42c7fdf7159

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -698,9 +698,9 @@ resources:
                 # Rabbit
                 rabbit_username: {get_input: rabbit_username}
                 rabbit_password: {get_input: rabbit_password}
-                rabbit_cookie: {get_input: rabbit_cookie}
                 rabbit_client_use_ssl: {get_input: rabbit_client_use_ssl}
                 rabbit_client_port: {get_input: rabbit_client_port}
+                rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
                 # Misc
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
                 ntp::servers: {get_input: ntp_servers}
