--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -556,6 +556,7 @@ resources:
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
             - rabbit # provided by allNodesConfig
+            - bootstrap_node # provided by BootstrapNodeConfig
             - common
           datafiles:
             common:
@@ -564,8 +565,6 @@ resources:
               raw_data: {get_file: hieradata/object.yaml}
             controller:
               raw_data: {get_file: hieradata/controller.yaml}
-              oac_data: # data we map in from other OAC configurations
-                bootstrap_nodeid: bootstrap_host.bootstrap_nodeid
               mapped_data: # data supplied directly to this deployment configuration, etc
                 debug: {get_input: debug}
                 bootstack_nodeid: {get_input: bootstack_nodeid}
