--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -9,6 +9,7 @@ resource_registry:
   OS::TripleO::ControllerPostDeployment: puppet/controller-post-puppet.yaml
   OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: puppet/swift-devices-and-proxy-config.yaml
   OS::TripleO::AllNodes::SoftwareConfig: puppet/all-nodes-config.yaml
+  OS::TripleO::BootstrapNode::SoftwareConfig: puppet/bootstrap-config.yaml
 
 # NOTE(dprince): requires a new release of python-heatclient
 #default_parameters:
