--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -9,3 +9,4 @@ resource_registry:
   OS::TripleO::ControllerPostDeployment: controller-post.yaml
   OS::TripleO::SwiftDevicesAndProxy::SoftwareConfig: swift-devices-and-proxy-config.yaml
   OS::TripleO::AllNodes::SoftwareConfig: all-nodes-config.yaml
+  OS::TripleO::BootstrapNode::SoftwareConfig: bootstrap-config.yaml
