--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -784,6 +784,12 @@ resources:
     properties:
       servers: {get_attr: [Controller, attributes, nova_server_resource]}
 
+  ComputeNodesPostDeployment:
+    type: OS::TripleO::ComputePostDeployment
+    depends_on: ComputeAllNodesDeployment
+    properties:
+      servers: {get_attr: [Compute, attributes, nova_server_resource]}
+
 outputs:
   KeystoneURL:
     description: URL for the Overcloud Keystone service
